// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemDetails /> should render additional components with new services 1`] = `
<Link
  className="tss-frmcd-details theme__product-grid__item__item-details"
  href=""
  state={
    {
      "title": "Foo",
    }
  }
  tabIndex={0}
>
  <div>
    <Swatches
      productId="1234"
    />
  </div>
  <div
    className="tss-ktmcgw-itemNameLink"
  >
    <ItemName
      display={null}
      name="Foo"
      productId="1234"
    />
  </div>
  <div
    className="tss-12ctkzi-propertiesLink"
  >
    <ShortDescription
      shortDescription={null}
    />
    <MapPriceHint
      productId="1234"
    />
    <OrderQuantityHint
      className="tss-r3y429-quantityHint"
      productId="1234"
    />
    <EffectivityDates
      productId="1234"
    />
    <Availability
      showWhenAvailable={false}
      state="AVAILABILITY_STATE_OK"
      text="product.available.not"
    />
    <StockInfoLists
      product={
        {
          "id": "1234",
          "name": "Foo",
          "price": {},
        }
      }
    />
    <div
      className="tss-1ra6wy3-itemPrice"
    >
      <ItemPrice
        display={null}
        product={
          {
            "id": "1234",
            "name": "Foo",
            "price": {},
          }
        }
      />
    </div>
  </div>
</Link>
`;

exports[`<ItemDetails /> should render with minimal props 1`] = `
<Link
  className="tss-frmcd-details theme__product-grid__item__item-details"
  href=""
  state={
    {
      "title": "Foo",
    }
  }
  tabIndex={0}
>
  <div>
    <Swatches
      productId="1234"
    />
  </div>
  <div
    className="tss-ktmcgw-itemNameLink"
  >
    <ItemName
      display={null}
      name="Foo"
      productId="1234"
    />
  </div>
  <div
    className="tss-12ctkzi-propertiesLink"
  >
    <ShortDescription
      shortDescription={null}
    />
    <MapPriceHint
      productId="1234"
    />
    <OrderQuantityHint
      className="tss-r3y429-quantityHint"
      productId="1234"
    />
    <EffectivityDates
      productId="1234"
    />
    <div
      className="tss-1ra6wy3-itemPrice"
    >
      <ItemPrice
        display={null}
        product={
          {
            "id": "1234",
            "name": "Foo",
            "price": {},
          }
        }
      />
    </div>
  </div>
</Link>
`;
